Refactor tracing interceptors and centralize trace utils
Moved common trace filtering and children checking logic to TraceUtils utility class and updated all tracing interceptors to use these shared methods. Updated TracingConfig to enable tracing by default and improved bean definitions. Adjusted integration tests and configuration to use new tracing options structure.